prompt for the local path to the jenkins_build private key
Signed-off-by: Andrew Schoen <aschoen@redhat.com>

--- a/deploy/playbooks/deploy.yml
+++ b/deploy/playbooks/deploy.yml
@@ -9,3 +9,8 @@
      use_ssl: true
      wsgi_file: wsgi.py
      wsgi_callable: application
+  vars_prompt:
+     - name: "jenkins_build_private_key_path"
+       prompt: "Enter the path to the jenkins_build private ssh key. If not provided this step will be skipped."
+       default: false
+       private: no
